# CP-ReNix

./: README.md  flake.nix
template/: CMakeLists.txt
template/src/: main.cpp
